--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:lib": "ng-packagr -p libs/package.json"
   },
   "private": true,
   "dependencies": {
@@ -25,9 +26,10 @@
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
     "moment": "^2.22.1",
+    "ng-packagr": "^3.0.3",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
-    
+    "zone.js": "^0.8.26",
+    "viz-toolkit": "file:./libs/viz-toolkit"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
@@ -38,8 +40,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
-    "highlight.js": "^9.9.0",
     "hammerjs": "^2.0.8",
+    "highlight.js": "^9.9.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
