--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "lottie-web": "^5.1.20",
     "moment": "^2.22.1",
     "ng-packagr": "^3.0.3",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "viz-toolkit": "file:./libs/viz-toolkit"
+    "viz-toolkit": "file:./libs/viz-toolkit",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
