--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:lib": "ng-packagr -p libs/package.json && mkdir libs/viz-toolkit/themes && cp libs/style.css libs/viz-toolkit/themes/index.theme.css"
+    "build-css": "node-sass-chokidar libs/style.scss libs/style.css",
+    "build:lib": "npm run build-css && ng-packagr -p libs/package.json && mkdir libs/viz-toolkit/themes && cp libs/style.css libs/viz-toolkit/themes/index.theme.css"
   },
   "private": true,
   "dependencies": {
@@ -53,7 +54,8 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "node-sass-chokidar": "^0.0.3"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.7",
