--- a/libs/package.json
+++ b/libs/package.json
@@ -17,7 +17,8 @@
     "@angular/compiler": "^6.0.2",
     "@angular/core": "^6.0.2",
     "@angular/forms": "^6.0.2",
-    "@angular/material": "^6.3.1"
+    "@angular/material": "^6.3.1",
+    "rxjs": "6.0.0"
   },
   "devDependencies": {
     "mat-range-datepicker": "~1.0.5"
