--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "node-sass-chokidar": "^0.0.3"
+    "node-sass-chokidar": "^0.0.3",
+    "viz-toolkit": "file:./libs/viz-toolkit"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.7",
