--- a/libs/package.json
+++ b/libs/package.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "../node_modules/ng-packagr/ng-package.schema.json",
   "name": "viz-toolkit",
   "version": "1.0.0",
   "ngPackage": {
+    "$schema": "../node_modules/ng-packagr/ng-package.schema.json",
     "lib": {
       "entryFile": "index.ts"
     },
@@ -10,20 +10,20 @@
     "whitelistedNonPeerDependencies": ["."]
   },
   "peerDependencies": {
-    "mat-range-datepicker": "~1.0.5",
-    "@angular/animations": "^6.0.7",
-    "@angular/cdk": "^6.3.1",
-    "@angular/common": "^6.0.2",
-    "@angular/compiler": "^6.0.2",
-    "@angular/core": "^6.0.2",
-    "@angular/forms": "^6.0.2",
-    "@angular/material": "^6.3.1",
-    "rxjs": "6.0.0"
+    "@angular/animations": ">=6.0.0",
+    "@angular/common": ">=6.0.0",
+    "@angular/compiler": ">=6.0.0",
+    "@angular/core": ">=6.0.0",
+    "@angular/forms": ">=6.0.0",
+    "rxjs": ">=6.0.0"
   },
   "devDependencies": {
     "mat-range-datepicker": "~1.0.5"
   },
   "dependencies": {
-    "mat-range-datepicker": "~1.0.5"
+    "mat-range-datepicker": "~1.0.5",
+    "@angular/cdk": "^6.3.1",
+    "@angular/material": "^6.3.1",
+    "@angular/router": ">=6.0.2"
   }
 }
