--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "css-element-queries": "^1.0.2",
     "highlight.js": "^9.12.0",
     "lottie-web": "^5.1.20",
+    "mat-range-datepicker": "^1.0.5",
     "moment": "^2.22.1",
     "ng-packagr": "^3.0.3",
     "rxjs": "^6.0.0",
@@ -54,8 +56,7 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "node-sass-chokidar": "^0.0.3",
-    "viz-toolkit": "file:./libs/viz-toolkit"
+    "node-sass-chokidar": "^0.0.3"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.7",
