--- a/libs/package.json
+++ b/libs/package.json
@@ -7,7 +7,9 @@
       "entryFile": "index.ts"
     },
     "dest": "viz-toolkit",
-    "whitelistedNonPeerDependencies": ["."]
+    "whitelistedNonPeerDependencies": [
+      "."
+    ]
   },
   "peerDependencies": {
     "@angular/animations": ">=6.0.0",
@@ -21,9 +23,9 @@
     "mat-range-datepicker": "~1.0.5"
   },
   "dependencies": {
-    "mat-range-datepicker": "~1.0.5",
     "@angular/cdk": "^6.3.1",
     "@angular/material": "^6.3.1",
-    "@angular/router": ">=6.0.2"
+    "@angular/router": ">=6.0.2",
+    "mat-range-datepicker": "~1.0.5"
   }
 }
