--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
-    "highlight.js": "^9.12.0",
     "lottie-web": "^5.1.20",
     "mat-range-datepicker": "^1.0.5",
     "moment": "^2.22.1",
@@ -51,11 +50,11 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass-chokidar": "^0.0.3",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
-    "node-sass-chokidar": "^0.0.3"
+    "typescript": "~2.7.2"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.7",
