--- a/libs/package.json
+++ b/libs/package.json
@@ -19,14 +19,19 @@
     "@angular/forms": ">=6.0.0",
     "rxjs": ">=6.0.0"
   },
-  "devDependencies": {
-    "mat-range-datepicker": "~1.0.5"
-  },
   "dependencies": {
+    "@angular/animations": "^6.1.6",
     "@angular/cdk": "^6.3.1",
+    "@angular/common": "^6.1.6",
+    "@angular/compiler": "^6.1.6",
+    "@angular/core": "^6.1.6",
+    "@angular/forms": "^6.1.6",
     "@angular/material": "^6.3.1",
+    "@angular/platform-browser": "^6.1.6",
     "@angular/router": ">=6.0.2",
+    "highcharts": "^6.1.1",
     "mat-range-datepicker": "~1.0.5",
-    "rxjs": "^6.2.2"
+    "rxjs": "^6.2.2",
+    "zone.js": "^0.8.26"
   }
 }
