--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
+    "highlight.js": "^9.12.0",
     "lottie-web": "^5.1.20",
     "mat-range-datepicker": "^1.0.5",
     "moment": "^2.22.1",
