--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "highlight.js": "^9.12.0",
     "lottie-web": "^5.1.20",
