--- a/libs/package.json
+++ b/libs/package.json
@@ -33,5 +33,8 @@
     "mat-range-datepicker": "~1.0.5",
     "rxjs": "^6.3.2",
     "zone.js": "^0.8.26"
+  },
+  "devDependencies": {
+    "@types/node": "^10.12.1"
   }
 }
