--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-watch":"ng-packagr -w libs/package.json",
+    "build-watch": "ng-packagr -w libs/package.json",
     "build-css": "node-sass-chokidar libs/style.scss libs/style.css --output-style compressed",
     "build:lib": "npm run build-css && ng-packagr -p libs/package.json && mkdir libs/viz-toolkit/themes && cp libs/style.css libs/viz-toolkit/themes/index.theme.css && mkdir libs/viz-toolkit/themes/assets && cp -R libs/assets libs/viz-toolkit/themes/"
   },
@@ -37,9 +37,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.3",
-    "@angular/cli": "~6.0.3",
     "@angular/compiler-cli": "^6.0.2",
+    "@angular-devkit/build-angular": "~0.6.3",
+    "typescript": "~2.7.2",
+    "@angular/cli": "~6.0.3",
     "@angular/language-service": "^6.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -56,8 +57,7 @@
     "node-sass-chokidar": "^0.0.3",
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "tslint": "~5.9.1"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.7",
