--- a/libs/package.json
+++ b/libs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viz-toolkit",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "ngPackage": {
     "$schema": "../node_modules/ng-packagr/ng-package.schema.json",
     "lib": {
@@ -20,15 +20,15 @@
     "rxjs": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.6",
-    "@angular/cdk": "^6.3.1",
-    "@angular/common": "^6.1.6",
-    "@angular/compiler": "^6.1.6",
-    "@angular/core": "^6.1.6",
-    "@angular/forms": "^6.1.6",
-    "@angular/material": "^6.3.1",
-    "@angular/platform-browser": "^6.1.6",
-    "@angular/router": ">=6.0.2",
+    "@angular/animations": "^7.2.2",
+    "@angular/cdk": "^7.2.2",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/forms": "^7.2.2",
+    "@angular/material": "^7.2.2",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/router": "^7.2.2",
     "highcharts": "^6.1.1",
     "mat-range-datepicker": "~1.0.5",
     "rxjs": "^6.3.2",
