--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vizient-toolkit",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
@@ -14,18 +14,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.7",
+    "@angular/animations": "^7.2.4",
     "@angular/cdk": "^6.3.1",
-    "@angular/common": "^6.0.2",
-    "@angular/compiler": "^6.0.2",
-    "@angular/core": "^6.0.2",
-    "@angular/forms": "^6.0.2",
-    "@angular/http": "^6.0.2",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
     "@angular/material": "^6.3.1",
     "@angular/material-moment-adapter": "^6.3.0",
-    "@angular/platform-browser": "^6.0.2",
-    "@angular/platform-browser-dynamic": "^6.0.2",
-    "@angular/router": "^6.0.2",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/platform-server": "^7.2.4",
+    "@angular/router": "^7.2.4",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "highlight.js": "^9.12.0",
@@ -33,15 +34,15 @@
     "mat-range-datepicker": "^1.0.5",
     "moment": "^2.22.1",
     "ng-packagr": "^4.2.0",
-    "rxjs": "^6.3.2",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.2",
-    "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.3",
-    "@angular/language-service": "^6.0.2",
+    "@angular-devkit/build-angular": "^0.13.1",
+    "@angular/cli": "^7.3.1",
+    "@angular/compiler-cli": "^7.2.4",
+    "@angular/language-service": "^7.2.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -57,7 +58,9 @@
     "node-sass-chokidar": "^0.0.3",
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": "^0.34.3",
+    "tslint": "^5.12.0",
+    "typescript": "^3.1.1"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.7",
