--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "ts-node": "~5.0.1",
     "tsickle": "^0.34.3",
     "tslint": "^5.12.0",
-    "typescript": "^3.1.1"
+    "typescript": "3.1.1"
   },
   "peerDependencies": {
     "@angular/animations": "^6.0.7",
