--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.4",
-    "@angular/cdk": "^6.3.1",
+    "@angular/cdk": "^7.3.6",
     "@angular/common": "^7.2.4",
     "@angular/compiler": "^7.2.4",
     "@angular/core": "^7.2.4",
     "@angular/forms": "^7.2.4",
     "@angular/http": "^7.2.4",
-    "@angular/material": "^6.3.1",
+    "@angular/material": "^7.3.6",
     "@angular/material-moment-adapter": "^6.3.0",
     "@angular/platform-browser": "^7.2.4",
     "@angular/platform-browser-dynamic": "^7.2.4",
     "@angular/platform-server": "^7.2.4",
     "@angular/router": "^7.2.4",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.4",
+    "core-js": "2.6.1",
     "highlight.js": "^9.12.0",
     "lottie-web": "^5.1.20",
     "mat-range-datepicker": "^1.0.5",
@@ -36,7 +36,7 @@
     "ng-packagr": "^4.2.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.1",
@@ -57,6 +57,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass-chokidar": "^0.0.3",
     "protractor": "^5.4.1",
+    "rxjs-tslint": "^0.1.7",
     "ts-node": "~5.0.1",
     "tsickle": "^0.34.3",
     "tslint": "^5.12.0",
